# surviving-sarntal

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CREDITS.md  Dockerfile  Doxyfile  LICENSE  README.md  compile_commands.json  run_clang_tidy.sh
src/: CMakeLists.txt  configuration.yaml  main.cpp
src/components/: input.cpp  input.h  inventory.cpp  inventory.h  kinect_handler.cpp  mountain.cpp  mountain.h  vector.cpp  vector.h
src/entities/: DynamicPolygon.h  Hiker.cpp  Hiker.h  HikerMovement.cpp  HikerMovement.h  Inventory.cpp  Inventory.h  Inventory.hpp  InventoryHandler.cpp  InventoryHandler.h  Item.cpp  Item.h  Item.hpp  Monster.cpp  Monster.h  Mountain.cpp  Mountain.h  RenderInformation.h  RenderedEntity.cpp  RenderedEntity.h  Rock.cpp  Rock.h  RockSpawnPhase.h  World.cpp  World.h
src/entities/implementations/: DynamicPolygon.cpp  Hiker.cpp  HikerMovement.cpp  Inventory.cpp  InventoryHandler.cpp  Item.cpp  Monster.cpp  Mountain.cpp  RenderedEntity.cpp  Rock.cpp  World.cpp
src/factory/: ItemSpawner.cpp  ItemSpawner.h  MountainGenerator.cpp  MountainGenerator.h  RockSpawner.cpp  RockSpawner.h
src/game/: DevMode.cpp  DevMode.hpp  DifficultyService.cpp  DifficultyService.hpp  Game.cpp  Game.hpp  GameFactory.cpp  GameFactory.hpp  GameProperties.hpp  Recorder.cpp  Recorder.h  Simulation.cpp  Simulation.h  configuration-dev-mode.yaml
src/game_logic/: start_screen.cpp  start_screen.h
src/geometry/: AABB.h  ConcavePolygon.cpp  ConcavePolygon.h  ConvexPolygon.h  DynamicConvexPolygon.cpp  DynamicConvexPolygon.h  Polygon.h  SimpleConvexPolygon.h
src/graphics/: Renderer.cpp  Renderer.h  ResourceManager.h
src/graphics/render_information/: RenderInformation.h
src/input/: InputHandler.cpp  InputHandler.h
src/input/devices/: Device.h  Gamepad.cpp  Gamepad.h  InputDevice.cpp  InputDevice.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
src/input/events/: Axis.h  AxisModification.h  DeviceEvent.h  EventType.h  GameEvent.h  TriggerType.h
src/manual-test/: configuration-man-test.yaml  test-case-0.yaml  test-case-1.yaml  test-case-2.yaml  test-case-3.yaml  test-case-4.yaml  test-case-5.yaml  test-case-6.yaml  test-case-7.yaml  test-case-8.yaml
src/menu/: EventProcessor.cpp  EventProcessor.h  FullMenuRenderer.cpp  FullMenuRenderer.h  MenuEngine.cpp  MenuEngine.h  MenuEnums.h  MenuEventProcessor.cpp  MenuEventProcessor.h  MenuRenderer.cpp  MenuRenderer.h  StartScreen.cpp  StartScreen.h
src/menu/menuElements/: Button.cpp  Button.h
src/menu/screens/: ControlsScreen.cpp  ControlsScreen.h  EndScreen.cpp  EndScreen.h  InstructionsScreen.cpp  InstructionsScreen.h  PauseScreen.cpp  PauseScreen.h  Screen.cpp  Screen.h  SettingsScreen.cpp  SettingsScreen.h  StartScreen.cpp  StartScreen.h
src/output/: ResourceManager.cpp  ResourceManager.h
src/output/audio/: AudioService.cpp  AudioService.hpp
src/output/graphics/: GraphicsUtil.cpp  GraphicsUtil.h  Renderer.cpp  Renderer.h
src/output/graphics/renderInformation/: AnimationInformation.h  RenderInformation.h
src/output/graphics/render_information/: AnimationInformation.h  RenderInformation.h
src/output/graphics/renderers/: CollisionDetectionDebugRenderer.cpp  CollisionDetectionDebugRenderer.h  EntityRenderer.cpp  EntityRenderer.h  HudRenderer.cpp  HudRenderer.h  (+6 more)
src/output/haptics/: HapticsService.cpp  HapticsService.hpp
src/physics/: PhysicsEngine.cpp  PhysicsEngine.hpp
src/physics/physicists/: Accelerator.cpp  Accelerator.hpp  CollisionDetector.cpp  CollisionDetector.hpp  CollisionHandler.cpp  CollisionHandler.hpp  Destructor.cpp  Destructor.hpp  EventProcessor.cpp  EventProcessor.hpp  GameEventProcessor.hpp  Interpolator.cpp  Interpolator.hpp  Positioner.cpp  Positioner.hpp  Spawner.cpp  Spawner.hpp
src/spawner/: ItemSpawner.cpp  ItemSpawner.h  MountainGenerator.cpp  MountainGenerator.h  PolygonGenerator.cpp  PolygonGenerator.h  RockSpawner.cpp  RockSpawner.h
src/spawner/rock_spawning/: Polygon.cpp  Polygon.h  PolygonGenerator.cpp  PolygonGenerator.h  PolygonRenderer.cpp  PolygonRenderer.h
src/systems/: game_logic.cpp  physics.cpp  physics.h  render_systems.cpp  rockSpawnStuff.cpp  rockSpawnStuff.h
src/terrain/: Terrain.cpp  Terrain.hpp
src/terrain/biomes/: Biome.cpp  Biome.hpp  BiomeType.hpp  Mountain.cpp  Mountain.hpp  TerrainPhase.hpp
src/terrain/collisionDetection/: CollisionDetectionRepresentation.cpp  CollisionDetectionRepresentation.hpp
src/terrain/components/: Background.hpp  ClosedComponent.cpp  ClosedComponent.hpp  Component.hpp  Ground.cpp  Ground.hpp  Splineoid.cpp  Splineoid.hpp
src/terrain/generation/: ConstraintChecker.cpp  ConstraintChecker.hpp  GenerationAngleCalculator.cpp  GenerationAngleCalculator.hpp  GenerationRenderer.cpp  GenerationRenderer.hpp  GroundGenerator.cpp  GroundGenerator.hpp
src/terrain/points/: Intersection.hpp  Line.cpp  Line.hpp  StaticPolyObject.cpp  StaticPolyObject.hpp  StaticPolygon.cpp  StaticPolygon.hpp  StaticPolyline.cpp  StaticPolyline.hpp
src/terrain/spatialDatastructure/: AxisAlignedBoundingBox.cpp  AxisAlignedBoundingBox.hpp  QuadTree.cpp  QuadTree.hpp
src/terrain/splines/: BezierSpline.cpp  BezierSpline.hpp  HermiteSpline.cpp  HermiteSpline.hpp  Polynomial.hpp  Spline.hpp  TwoDimensionalHermiteSpline.cpp  TwoDimensionalHermiteSpline.hpp
src/utilities/: BezierSpline.hpp  CollisionUtils.h  ConfigManager.cpp  ConfigManager.hpp  GameConstants.hpp  HermiteSpline.cpp  HermiteSpline.hpp  Polynomial.cpp  Polynomial.hpp  RandomGenerator.cpp  RandomGenerator.hpp  Singleton.hpp  YamlConversions.hpp  config.yaml  vector.cpp  vector.h
src/utils/: game_constants.h  game_constants.hpp  resource_manager.h
test/: CMakeLists.txt  main_test.cpp
test/entities/: HikerTest.cpp  InventoryTest.cpp  ItemTest.cpp  MockAudioService.cpp  MockAudioService.h  MockResourceManager.cpp  MockResourceManager.h  MonsterTest.cpp  WorldTest.cpp
test/physics/: CollisionDetectorTest.cpp  CollisionDetectorTest.h
test/spawner/: PolygonGeneratorTest.cpp  PolygonGeneratorTest.h
test/utilities/: VectorTest.cpp
(+91 files in other folders)
